<resources>
    <string name="app_name">muebleria-miley-movil</string>

    <string name="label_getstarted">Get started</string>
    <string name="label_usuario">Correo Electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="label_start_session">Iniciar Sesión</string>
    <string name="label_nuevoUser"><u>Nuevo Usuario ? Registrarme Ahora</u></string>
    <string name="label_olvide_password">Olvide mi contraseña ?</string>
    <string name="label_bienvenida">Hola ! - Identifíquese para iniciar sesión</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jose Daniel Perez</string>
    <string name="nav_header_subtitle">josedanielperez@live.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="nav_home">Home</string>
    <string name="nav_order">Orders</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_profile">Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_delivery">Delivery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="text_toast_ok">excelente, mensaje de toast</string>
    <string name="text_toast_error">error, mensaje de toast</string>

    <string name="text_search">buscar cualquier cosa</string>
    <string name="text_subtitle1">Nuestras Categorias</string>
    <string name="text_subtitle2">Nuestros Productos</string>
    <string name="text_subtitle3">ver todos</string>

    <string name="image_register">Subir imagen para tu perfil</string>
    <string name="button_image_register">Subir Imagen</string>
    <string name="text_subtitle1_register">Registrar Datos Personales</string>

    <string name="btn_cat">sillas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <style name="OrderLabel">
        <item name="android:textColor">#AAAAAA</item>
        <item name="android:textSize">14sp</item>
        <item name="android:layout_marginTop">8dp</item>
    </style>

    <style name="OrderValue">
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:textSize">16sp</item>
        <item name="android:layout_marginBottom">8dp</item>
    </style>

    <string name="title_activity_maps">MapsActivity</string>

</resources>