<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.dswjp.muebleria_miley_movil.activity.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.dswjp.muebleria_miley_movil.activity.fragment.CartFragment"
        android:label="@string/nav_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.dswjp.muebleria_miley_movil.activity.fragment.OrderFragment"
        android:label="@string/nav_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.dswjp.muebleria_miley_movil.activity.fragment.ProfileFragment"
        android:label="@string/nav_order"
        tools:layout="@layout/fragment_profile" />
</navigation>