<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgFondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_main"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:id="@+id/llPart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            >

            <ImageView
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="55dp"
                />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPart2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llPart1" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/label_bienvenida"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llPart3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/llPart2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" >
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/label_usuario"
            app:startIconDrawable="@drawable/ic_email" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPart4"
        android:layout_below="@+id/llPart3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIniciarSesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/label_start_session"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:drawableTint="@color/black"
            android:drawableEnd="@drawable/ic_login"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPart5"
        android:orientation="horizontal"
        android:layout_below="@+id/llPart4"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtNuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:gravity="center|center_horizontal"
            android:text="@string/label_nuevoUser"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/llPart5"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/san_francisco"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/label_olvide_password"/>
    </LinearLayout>

</RelativeLayout>